Fix up spacing in media object

--- a/scss/_patterns_media-object.scss
+++ b/scss/_patterns_media-object.scss
@@ -17,6 +17,10 @@
   .p-media-object {
     display: flex;
 
+    &__details {
+      margin-top: 0;
+    }
+
     &__image {
       border-radius: 4px;
       height: 3.75rem;
@@ -35,9 +39,13 @@
       margin-bottom: .5rem;
     }
 
+    &__content {
+      margin-top: $sp-xx-small;
+    }
+
     &__meta-list {
       list-style: none;
-      margin: 0;
+      margin: $sp-medium 0 0;
       padding-left: 0;
     }
 
